RESOLVED FIXED159527
tdody.deleteRow(-1) and tr.deleteCell(-1) should not throw when there are no rows / cells
https://bugs.webkit.org/show_bug.cgi?id=159527
Summary tdody.deleteRow(-1) and tr.deleteCell(-1) should not throw when there are no ...
Attachments
Patch (5.15 KB, patch)
2016-07-07 15:48 PDT, Chris Dumez
no flags
Patch (5.45 KB, patch)
2016-07-07 18:01 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2016-07-07 15:31:14 PDT
Chris Dumez
Comment 2 2016-07-07 15:48:34 PDT
Ryosuke Niwa
Comment 3 2016-07-07 17:18:57 PDT
Comment on attachment 283071 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=283071&action=review > Source/WebCore/html/HTMLTableRowElement.cpp:134 > index = numCells-1; Why don't we just return early here instead when numCells is 0? Also, can we add spaces around -? > Source/WebCore/html/HTMLTableSectionElement.cpp:92 > - else > + else if (index != -1) Ditto about returning early when index == -1.
Chris Dumez
Comment 4 2016-07-07 18:01:23 PDT
WebKit Commit Bot
Comment 5 2016-07-07 18:56:56 PDT
Comment on attachment 283096 [details] Patch Clearing flags on attachment: 283096 Committed r202952: <http://trac.webkit.org/changeset/202952>
WebKit Commit Bot
Comment 6 2016-07-07 18:57:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.