tdody.deleteRow(-1) and tr.deleteCell(-1) should not throw when there are no rows / cells https://bugs.webkit.org/show_bug.cgi?id=159527 <rdar://problem/27232261>

Reviewed by Alex Christensen.

LayoutTests/imported/w3c:

Rebaseline now that more checks are passing.

* web-platform-tests/html/semantics/tabular-data/the-tbody-element/deleteRow-expected.txt:
* web-platform-tests/html/semantics/tabular-data/the-tr-element/deleteCell-expected.txt:

Source/WebCore:

tdody.deleteRow(-1) and tr.deleteCell(-1) should not throw when there
are no rows / cells:
- https://html.spec.whatwg.org/multipage/tables.html#dom-tbody-deleterow
- https://html.spec.whatwg.org/multipage/tables.html#dom-tr-deletecell

Firefox and Chrome do not throw but WebKit was throwing.

No new tests, rebaselined existing tests.

* html/HTMLTableRowElement.cpp:
(WebCore::HTMLTableRowElement::deleteCell):
* html/HTMLTableSectionElement.cpp:
(WebCore::HTMLTableSectionElement::deleteRow):


Canonical link: https://commits.webkit.org/177676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202952 268f45cc-cd09-0410-ab3c-d52691b4dbfc